# FROAV_LLM

./: .dockerignore  .gitignore  EXTERNAL_REPORTS_README.md  LICENSE  docker-compose.yml  import_external_user_feedback_workflow.json  import_external_workflow.json  pyproject.toml  readme.md  sample_external_reports.json  sample_external_user_feedback.json  sample_user_data.csv  workflows.json
LLMJudges_frontend/: Dockerfile
LLMJudges_frontend/src/: feedback_window.py  judgement_tab.py  main_page.py  report_tab.py  utils.py
LLMJudges_frontend/src/config/: config_loader.py
LLMJudges_server/: Dockerfile
LLMJudges_server/src/: main.py
LLMJudges_server/src/py_libs/parsing_helper/: pdf_file_preprocess.py  pdf_preprocessor.py  report_log_preprocess.py
LLMJudges_server/src/routers/: llm_judges_router.py
